Fix contact alignment in header style

--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ header p {
   opacity: 0.95;
 }
 
+/* ✔ FIX CONTACT ALIGNMENT */
+header .contact-info {
+  text-align: left;
+  margin: 0 auto;
+  width: fit-content;
+  line-height: 1.6;
+}
+
 /* Navigation */
 nav {
   text-align: center;
